@@ -1,3 +1,5 @@
+	* Bugfix. https://pm.cetera.ru/browse/RRCC-339
+	* BackOffice. В файловом менеджере возможна загрузка только в www/uploads https://pm.cetera.ru/browse/CCD-1314
 	* API. Трейт \Cetera\Traits\Extendable для классов, которые могут быть расширены в пользовательских темах.
 
 3.58.5
